--- a/Widget/Chart/ChartBarCPU.css
+++ b/Widget/Chart/ChartBarCPU.css
@@ -9,13 +9,13 @@
  ******************************************************************************/
 
 .chart {
-    -fx-padding: 5px;
+    -fx-padding: 2px;
 }
 .chart-plot-background {
     -fx-background-color: derive(-fx-background,25%);
 }
 .chart-content {
-    -fx-padding: 10px;
+    -fx-padding: 5px;
 }
 .chart-title {
     -fx-font-size: 1.2em;
@@ -66,6 +66,16 @@
 
 .axis {
     AXIS_COLOR: derive(-fx-background,-20%);
-    -fx-tick-label-font-size: .8em; /* 16px */
+    -fx-tick-label-font-size: .6em; /* 16px */
     -fx-tick-label-fill: derive(-fx-text-background-color, 60%);
 	}
+
+.default-color0.chart-bar { -fx-bar-fill: CHART_COLOR_1;
+	-fx-background-color:   linear-gradient(to top, 
+										rgb(0,200,0) 0%,
+										rgb(0,255,64) 75%,
+                                        rgb(128,255,64) 85%,
+										rgb(255,255,0) 95%,
+                                        rgb(255,0,0) 100%
+                              );
+   }
